--- a/src/components/OHIFLogo/OHIFLogo.css
+++ b/src/components/OHIFLogo/OHIFLogo.css
@@ -18,12 +18,16 @@
 }
 
 .header-logo-text {
-  line-height: 30px;
-  margin-left: 8px;
+  line-height: 20px;
+  margin-left: 4px;
 }
 
 .header-logo-image {
-  height: 30px;
-  width: 30px;
-  font-size: 30px;
+  height: 40px;
+  width: 40px;
+  font-size: 20px;
+  background-image:url("oceansWhite.jpg");
+  background-position: center center;
+  background-size: 100%;
+  background-repeat: no-repeat;
 }
